Fixes navigation alignment

--- a/assets/stylesheets/components/_navigation-top.scss
+++ b/assets/stylesheets/components/_navigation-top.scss
@@ -1,12 +1,14 @@
 .main-navigation {
   clear: both;
-  display: block;
+  display: inline-block;
+  vertical-align: middle;
   float: left;
   width: 100%;
   background-color: #2b2b2b;
 
   ul {
     display: inline-block;
+    vertical-align: middle;
     list-style: none;
     margin: 0;
     padding-left: 0;
@@ -56,7 +58,7 @@
     float: left;
     margin: 0px 25px 0px 25px;
     position: relative;
-    padding-top: 30px;
+    padding-top: 10px;
     padding-bottom: 10px;
 
     &:hover > a,
